--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.apollo.samples</groupId>
     <artifactId>SampleProject</artifactId>
     <packaging>jar</packaging>
-    <version>1.0</version>
+    <version>1.013-SNAPSHOT</version>
     <name>SampleProject</name>
     <url>http://maven.apache.org</url>
     <build>
@@ -57,6 +59,5 @@
 	  <connection>scm:git:https://github.com/mariem-89/jenkins-sample-1.git</connection>
 	  <url>https://github.com/mariem-89/jenkins-sample-1</url>
 	  <developerConnection>scm:git:https://github.com/mariem-89/jenkins-sample-1.git</developerConnection>
-      <tag>v1.0</tag>
-  </scm>
+    </scm>
 </project>
